fixed the spacing for subscription box and specialities box

--- a/css/main.css
+++ b/css/main.css
@@ -14376,6 +14376,11 @@ textarea.form-control-lg {
   margin: 1rem 0;
   min-height: 210px;
 }
+@media screen and (min-width: 900px) {
+  .specialties-slider .slick-list .slider-item {
+    min-height: 270px;
+  }
+}
 .specialties-slider .slick-list .slider-item .specialty {
   display: flex;
   flex-direction: column;
@@ -14483,7 +14488,7 @@ textarea.form-control-lg {
   border-radius: 10px;
   box-shadow: 0px 6px 4px 0px rgba(50, 5, 7, 0.25);
   margin: 2.5rem 2rem;
-  padding: 1rem;
+  padding: 4rem 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14492,7 +14497,6 @@ textarea.form-control-lg {
 }
 @media screen and (min-width: 1400px) {
   .subscription .subscription-container {
-    padding: 2rem;
     width: 55vw;
   }
 }
